--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,203 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin: 16px;
-    background-color: #1F2937;
-    
+  display: flex;
+  justify-content: space-around;
+  background-color: #1f2937;
+  align-items: center;
 }
 
 .logo {
-    display: flex;
+  margin: 1rem 8rem;
 }
 
 ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  list-style: none;
+  margin: 0 8rem;
+  padding: 0;
 }
 
 li {
-    padding: 0 16px;
+  padding: 0 16px;
+  font-size: 1.5rem;
 }
 
 a {
-    text-decoration: none;
-    color: #E5E7EB;
+  text-decoration: none;
+  color: #e5e7eb;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  width: 33vw;
+  padding: 16px;
+  background-color: #1f2937;
+}
+
+.hero-main {
+    font-size: 64px;
+    color: #f9faf8;
+    margin-top: 64px;
+}
+
+.hero-secondary {
+    font-size: 24px;
+    color: #e5e7eb;
+}
+
+.sign-up {
+  background-color: #3882f6;
+  width: 300px;
+  border-radius: 8px;
+  padding: 16px 0px;
+  justify-content: center;
+  color: #e5e7eb;
+  margin: 32px 0;
+  font-size: 32px;
+}
+ 
+.main-one {
+    display: flex;
+    flex: 1 1 auto;
+    background-color: #1f2937;
+    justify-content: center;
+    column-gap: 200px;
+}
+
+.hero-img {
+    display: flex;
+    width: 500px;
+    align-items: center;
+}
+
+ .hero-img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 32px;
+}
+
+.main-two {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 48px;
+}
+
+.info {
+    font-size: 64px;
+}
+
+.four-img {
+    display: flex;
+    flex-direction: column;
+}
+
+.card {
+    display: flex;
+}
+
+.card-img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 64px;
+    border: 5px solid #1f2937;
+    box-shadow: 8px 8px 10px #1f293763;
+    margin: 16px;
+}
+
+.sub-text {
+    display: flex;
+    justify-content: space-around;
+}
+
+.sub {
+    width: 200px;
+    margin: 16px;
+    text-align: center;
+    font-size: 24px;
+}
+
+.main-three {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #e5e7eb;
+    padding: 48px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    margin: 0 25%;
+}
+
+.author {
+    align-self: flex-end;
+    margin-right: 550px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.main-four {
+    display: flex;
+    flex: 1 1 auto;
+    height: 200px;
+    background-color: #3882f6;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 100px 300px;
+    border-radius: 10px;
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.cta {
+    display: flex;
+    flex-direction: column;
+}
+
+.top-cta {
+    font-weight: bold;
+}
+
+.sign-down {
+    background-color: #3882f6;
+    width: 200px;
+    border: 3px solid #f9faf8;
+    border-radius: 5Spx;
+    padding: 16px 0px;
+    justify-content: center;
+    color: #f9faf8;
+    font-size: 24px;
+}
+
+.button-two {
+    padding: 0 16px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1f2937;
+    color: #f9faf8;
+}
+
+.footer {
+    padding: 24px;
 }
