--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ a {
     background-color: #3882f6;
     width: 200px;
     border: 3px solid #f9faf8;
-    border-radius: 5Spx;
+    border-radius: 10px;
     padding: 16px 0px;
     justify-content: center;
     color: #f9faf8;
